// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IconAvatar Snapshot - different sizes 1`] = `
<View
  className="flex aspect-square items-center justify-center border border-solid border-f0-border-secondary h-6 w-6 rounded-sm"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="100%"
    bbWidth="100%"
    className="shrink-0 w-4 h-4 stroke-sm text-f0-foreground-secondary"
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        [
          {},
        ],
        {
          "flex": 0,
          "height": "100%",
          "width": "100%",
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M12.463 3.012A9 9 0 0 1 21 12l-.012.463A9 9 0 0 1 12 21l-.463-.012a9 9 0 0 1-8.525-8.525L3 12a9 9 0 0 1 9-9zM7.586 17.686A7.17 7.17 0 0 0 12 19.2a7.17 7.17 0 0 0 4.413-1.514L12 13.272zm-1.273-10.1A7.17 7.17 0 0 0 4.8 12c0 1.664.565 3.194 1.513 4.413L10.726 12zm6.959 4.413 4.414 4.414A7.17 7.17 0 0 0 19.2 12a7.17 7.17 0 0 0-1.514-4.414zM12 4.8a7.17 7.17 0 0 0-4.414 1.513l4.413 4.413 4.414-4.413A7.17 7.17 0 0 0 12 4.8"
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IconAvatar Snapshot - different sizes 2`] = `
<View
  className="flex aspect-square items-center justify-center border border-solid border-f0-border-secondary h-9 w-9 rounded-md"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="100%"
    bbWidth="100%"
    className="shrink-0 w-5 h-5 stroke-md text-f0-foreground-secondary"
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        [
          {},
        ],
        {
          "flex": 0,
          "height": "100%",
          "width": "100%",
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M12.463 3.012A9 9 0 0 1 21 12l-.012.463A9 9 0 0 1 12 21l-.463-.012a9 9 0 0 1-8.525-8.525L3 12a9 9 0 0 1 9-9zM7.586 17.686A7.17 7.17 0 0 0 12 19.2a7.17 7.17 0 0 0 4.413-1.514L12 13.272zm-1.273-10.1A7.17 7.17 0 0 0 4.8 12c0 1.664.565 3.194 1.513 4.413L10.726 12zm6.959 4.413 4.414 4.414A7.17 7.17 0 0 0 19.2 12a7.17 7.17 0 0 0-1.514-4.414zM12 4.8a7.17 7.17 0 0 0-4.414 1.513l4.413 4.413 4.414-4.413A7.17 7.17 0 0 0 12 4.8"
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IconAvatar Snapshot - different sizes 3`] = `
<View
  className="flex aspect-square items-center justify-center border border-solid border-f0-border-secondary h-10 w-10 rounded-lg"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="100%"
    bbWidth="100%"
    className="shrink-0 w-6 h-6 stroke-lg text-f0-foreground-secondary"
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        [
          {},
        ],
        {
          "flex": 0,
          "height": "100%",
          "width": "100%",
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M12.463 3.012A9 9 0 0 1 21 12l-.012.463A9 9 0 0 1 12 21l-.463-.012a9 9 0 0 1-8.525-8.525L3 12a9 9 0 0 1 9-9zM7.586 17.686A7.17 7.17 0 0 0 12 19.2a7.17 7.17 0 0 0 4.413-1.514L12 13.272zm-1.273-10.1A7.17 7.17 0 0 0 4.8 12c0 1.664.565 3.194 1.513 4.413L10.726 12zm6.959 4.413 4.414 4.414A7.17 7.17 0 0 0 19.2 12a7.17 7.17 0 0 0-1.514-4.414zM12 4.8a7.17 7.17 0 0 0-4.414 1.513l4.413 4.413 4.414-4.413A7.17 7.17 0 0 0 12 4.8"
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
